--- a/components/layout/Scrollbar.module.scss
+++ b/components/layout/Scrollbar.module.scss
@@ -14,6 +14,10 @@ $primary: (
 :global(.simplebar-content) {
     min-height: 100%;
     height: 100%;
+
+    &::before {
+        display: none !important;
+    }
 }
 :global(.simplebar-track) {
     width: map-get($bar, "width") !important;
